2004-09-03  John Gardiner Myers  <jgmyers@proofpoint.com>

	* intercept.c (clone __clone clone_thunk): Add extra arguments to
	clone intercept functions.  (Fixes #122460)

	* process.c (process_read_maps): 
	* leakdetect.c (read_stack_maps): 
	Parse device numbers as hex.  Fix from Ian McKellar.  (Fixes #120457)

	* main.c (main): Fix typo.  (Fixes #139682)

	* intercept.c (memprof_init): Make a copy of the socket path so we
	don't rely on the profiled program leaving the environment alone.
	(Fixes #148603)

	* process.c (process_duplicate): When following fork, create the
	copy block hash table before trying to insert into it.  (Fixes #148606)

	* memprof.h:
	* process.c (process_locate_symbol): Addresses within shared
	libraries without symbols reported under the name of the shared
	library.  (Fixes #148616)
	
	* process.c (prepare_map): Kludge to support position independent
	executables.  (Fixes #148622)

2004-09-02  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-09-01 Amanpreet Singh Alam  <aalam@redhat.com>
	
	* configure.in: Added Punjabi<pa> to ALL_LINGUAS.

2004-06-30  Narayana Pattipati  <narayana.pattipati@wipro.com>

	* main.c (stack_command_entry_focus_out): Return FALSE to enable
	entry handle the focus out event. Fixes the crash reported in
	bugzilla bug#145198.

2004-05-01  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-09  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

Fri Jan 23 12:20:47 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* profile.c (profile_func_create_caller_list): Fix yet another
	"symbol_equal() instead of ==" bug.

Fri Dec 19 16:41:00 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* process.c (prepare_map): Only report symbols in the ".text" segment.
