@@ -1,3 +1,7 @@
+2004-09-10  John Gardiner Myers  <jgmyers@proofpoint.com>
+
+	* process.c (process_duplicate): Don't try to copy NULL block table.
+
 2004-09-03  John Gardiner Myers  <jgmyers@proofpoint.com>
 
 	* intercept.c (clone __clone clone_thunk): Add extra arguments to
